--- a/configs/bridgeport/bridgeport.ini
+++ b/configs/bridgeport/bridgeport.ini
@@ -15,7 +15,7 @@ POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 2.000000
 MAX_SPINDLE_OVERRIDE = 1.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
-INTRO_GRAPHIC = linuxcnc.gif
+#INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 0
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
 INCREMENTS = .1in .05in .01in .005in .001in .0005in .0001in
@@ -72,7 +72,7 @@ COORDINATES =  XYZ
 LINEAR_UNITS = inch
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 0.17
-MAX_LINEAR_VELOCITY = 1.67
+MAX_LINEAR_VELOCITY = 2.0
 NO_FORCE_HOMING = 1
 
 [EMCIO]
