--- a/configs/bridgeport/bridgeport.ini
+++ b/configs/bridgeport/bridgeport.ini
@@ -83,7 +83,7 @@ TOOL_TABLE = tool.tbl
 MAX_VELOCITY = 2.0
 MAX_ACCELERATION = 10.0
 MIN_LIMIT = -12.0
-MAX_LIMIT = 12.0
+MAX_LIMIT = 11.6
 
 [JOINT_0]
 TYPE = LINEAR
@@ -92,22 +92,27 @@ FERROR = 0.2
 MIN_FERROR = 0.05
 MAX_VELOCITY = 2.0
 MAX_ACCELERATION = 10.0
-P = 250
-I = 100
-D = 15
+P = 500
+I = 0
+D = 0
 FF0 = 0
-FF1 = 6
+FF1 = 1
 FF2 = 0
 BIAS = 0
-DEADBAND = 2e-06
+DEADBAND = 0.0002
 MAX_OUTPUT = 10
 OUTPUT_SCALE = 10
 ENCODER_MOTOR_SCALE = 27940
 ENCODER_LINEAR_SCALE = 5080
 MIN_LIMIT = -12.0
-MAX_LIMIT = 12.0
-HOME_OFFSET = 0.0
-HOME_SEQUENCE = 2
+MAX_LIMIT = 11.6
+HOME_OFFSET = -12.1
+HOME_SEQUENCE = 0
+HOME_SEARCH_VEL = -0.7
+HOME_LATCH_VEL = -0.1
+HOME_FINAL_VEL = 1.5
+HOME_IGNORE_LIMITS = YES
+
 #******************************************
 
 #******************************************
