--- a/configs/velservo/velservo.ini
+++ b/configs/velservo/velservo.ini
@@ -93,7 +93,7 @@ TYPE = LINEAR
 HOME = 0.0
 FERROR = 0.5
 MIN_FERROR = 0.2
-BACKLASH = 0.005
+#BACKLASH = 0.005
 MAX_VELOCITY = 3.5
 MAX_ACCELERATION = 15.0
 P = 114
