--- a/configs/velservo/velservo.ini
+++ b/configs/velservo/velservo.ini
@@ -96,16 +96,17 @@ MIN_FERROR = 0.2
 #BACKLASH = 0.005
 MAX_VELOCITY = 3.5
 MAX_ACCELERATION = 15.0
-P = 114
-I = 0
-D = 5
+P = 650
+I = 2
+D = 18.5
 FF0 = 0
-FF1 = 1.08
-FF2 = 0.009
+FF1 = 1.045
+FF2 = 0.02
 BIAS = 0
-DEADBAND = 0.0002
+DEADBAND = 2e-05
 MAX_OUTPUT = 0
 ENCODER_SCALE = 107710.3
+ENCODER_LINEAR_SCALE = 5080
 OUTPUT_SCALE = 7.6
 MIN_LIMIT = -12.0
 MAX_LIMIT = 11.5
