use custom el7_xxx component names

--- a/configs/cia402/cia402.ini
+++ b/configs/cia402/cia402.ini
@@ -6,7 +6,7 @@
 # The version string for this INI file.
 VERSION = 1.1
 
-MACHINE = EtherCAT Machine
+MACHINE = Bridgeport EtherCAT Conversion
 DEBUG = 1
 
 [DISPLAY]
@@ -49,10 +49,8 @@ nc = /usr/bin/axis
 PARAMETER_FILE = linuxcnc.var
 
 [EMCMOT]
-
 EMCMOT = motmod
-#HOMEMOD = cia402_homecomp
-HOMEMOD = el8_homecomp
+HOMEMOD = el7_homecomp
 COMM_TIMEOUT = 1.0
 BASE_PERIOD =  0
 SERVO_PERIOD = 1000000
