cleanups and comments

--- a/configs/bridgeport-ethercat/bridgeport-ethercat.ini
+++ b/configs/bridgeport-ethercat/bridgeport-ethercat.ini
@@ -60,7 +60,7 @@ TASK = milltask
 CYCLE_TIME = 0.005
 
 [HAL]
-HALFILE = cia402.hal
+HALFILE = bridgeport-ethercat.hal
 SHUTDOWN = shutdown.hal
 #HALFILE = custom.hal
 #POSTGUI_HALFILE = pyvcp_panel.hal
@@ -91,7 +91,7 @@ EMCIO = 		io
 CYCLE_TIME =    0.100
 
 # tool table file
-TOOL_TABLE =    cia402.tbl
+TOOL_TABLE =    bridgeport-ethercat.tbl
 #TOOL_CHANGE_POSITION = 0 0 50.8
 #RANDOM_TOOLCHANGER = 1
 
