--- a/configs/bridgeport-ethercat/bridgeport-ethercat.ini
+++ b/configs/bridgeport-ethercat/bridgeport-ethercat.ini
@@ -29,9 +29,10 @@ POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 1.2
 # Prefix to be used
-PROGRAM_PREFIX = /home/demo/linuxcnc/nc_files
-INTRO_GRAPHIC = linuxcnc.gif
-INTRO_TIME = 0
+PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
+#INTRO_GRAPHIC = linuxcnc.gif
+#INTRO_TIME = 0
+
 #INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 INCREMENTS = 0.1in 0.01in 0.001in
 
@@ -45,7 +46,6 @@ py = python
 nc = /usr/bin/axis
 
 [RS274NGC]
-
 PARAMETER_FILE = linuxcnc.var
 
 [EMCMOT]
@@ -60,17 +60,18 @@ TASK = milltask
 CYCLE_TIME = 0.005
 
 [HAL]
+TWOPASS = true
 HALFILE = bridgeport-ethercat.hal
+#HALFILE = shuttle.hal
 SHUTDOWN = shutdown.hal
-#HALFILE = custom.hal
-#POSTGUI_HALFILE = pyvcp_panel.hal
+POSTGUI_HALFILE = postgui.hal
 HALUI = halui
 
 [HALUI]
 
 [TRAJ]
 HOME = 0 0 0
-COORDINATES = X Y Z
+COORDINATES = X Y Z W
 LINEAR_UNITS = inch
 ANGULAR_UNITS = degree
 DEFAULT_LINEAR_VELOCITY = 0.5
@@ -102,8 +103,8 @@ KINEMATICS = trivkins
 
 
 [AXIS_X]
-MIN_LIMIT = 0
-MAX_LIMIT = 23.9
+MIN_LIMIT = 0.0
+MAX_LIMIT = 24.0
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
 
@@ -111,24 +112,17 @@ MAX_ACCELERATION = 15.0
 TYPE = LINEAR
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
-FERROR = .02
+FERROR = .2
 MIN_FERROR = 50
-MIN_LIMIT = 0
-MAX_LIMIT = 23.9
+MIN_LIMIT = 0.0
+MAX_LIMIT = 24.0
 # 1 = use abs but move to home when done
 # 2 = use abs but do NOT move
 #HOME_ABSOLUTE_ENCODER = 2
 
-#HOME_OFFSET = 0.0
-#HOME_SEARCH_VEL = 0.0
-#HOME_LATCH_VEL = 0.01
-#HOME_USE_INDEX = TRUE
-#HOME_SEQUENCE = 0
-
-
 [AXIS_Y]
-MIN_LIMIT = -12.0
-MAX_LIMIT = 0
+MIN_LIMIT = 0
+MAX_LIMIT = 11.6
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
 
@@ -137,31 +131,23 @@ MAX_ACCELERATION = 15.0
 TYPE = LINEAR
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
-SCALE = 131482.35294
-FERROR = .02
-MIN_FERROR = 20
-MIN_LIMIT = -12.0
-MAX_LIMIT = 0.0
+FERROR = .2
+MIN_FERROR = 50
+MIN_LIMIT = 0
+MAX_LIMIT = 11.6
 #HOME_ABSOLUTE_ENCODER = 2
-#HOME_USE_INDEX = YES
-
 
 [JOINT_2]
 TYPE = LINEAR
 MAX_VELOCITY = 50
 MAX_ACCELERATION = 1000
-STEP_SCALE = 1
-FERROR = .02
-MIN_FERROR = 20
 MIN_LIMIT = -2.5
 MAX_LIMIT = 2.5
-HOME_SEQUENCE			= 1
-HOME_USE_INDEX = NO
-
+FERROR=50
+MIN_FERROR=50
 
 [AXIS_Z]
-MIN_LIMIT = -2.5
-MAX_LIMIT = 2.5
-MAX_VELOCITY = 1.0
-MAX_ACCELERATION = 10.0
-
+MIN_LIMIT = 0
+MAX_LIMIT = -5.1
+MAX_VELOCITY = 0.0
+MAX_ACCELERATION = 0.0
