working Y axis now.  clean up hal to use ini vars

--- a/configs/bridgeport-ethercat/bridgeport-ethercat.ini
+++ b/configs/bridgeport-ethercat/bridgeport-ethercat.ini
@@ -110,19 +110,33 @@ MAX_ACCELERATION = 15.0
 
 [JOINT_0]
 TYPE = LINEAR
+POS_SCALE=
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
 FERROR = .2
 MIN_FERROR = 50
 MIN_LIMIT = 0.0
 MAX_LIMIT = 24.0
+# X axis has a 5mm pitch ball screw
+# 26:44T belt drive
+SERVO_SCALE=85969.2307692
+# X axis glass linear scale is 5 micron or 5080 counts/inch
+LINEAR_SCALE=5080
+# homing is done in the servo drive and managed on the linuxcnc side by el7_homecomp
+# use homing method 1, travel to negative limit switch (located at left side of table)
+CIA402_HOMING_METHOD=1
+CIA402_HOMING_SEARCH_VELOCITY=40000
+CIA402_HOMING_LATCH_VELOCITY=10000
+CIA402_HOMING_ACCELERATION=200000
 # 1 = use abs but move to home when done
 # 2 = use abs but do NOT move
 #HOME_ABSOLUTE_ENCODER = 2
 
+
+
 [AXIS_Y]
-MIN_LIMIT = 0
-MAX_LIMIT = 11.6
+MIN_LIMIT = -11.25
+MAX_LIMIT = 0.0
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
 
@@ -133,8 +147,21 @@ MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
 FERROR = .2
 MIN_FERROR = 50
-MIN_LIMIT = 0
-MAX_LIMIT = 11.6
+MIN_LIMIT = -11.25
+MAX_LIMIT = 0.0
+# Y axis has a 0.200" ball screw (even though X is a 5mm metric screw!)
+# 26:44T belt drive
+SERVO_SCALE= 84615.3846154
+# X axis glass linear scale is 5 micron or 5080 counts/inch
+LINEAR_SCALE=5080
+# homing is done in the servo drive and managed on the linuxcnc side by el7_homecomp
+# use homing method 2, travel to positive limit switch (located at front of knee)
+CIA402_HOMING_METHOD=2
+CIA402_HOMING_SEARCH_VELOCITY=40000
+CIA402_HOMING_LATCH_VELOCITY=10000
+CIA402_HOMING_ACCELERATION=200000
+# 1 = use abs but move to home when done
+# 2 = use abs but do NOT move
 #HOME_ABSOLUTE_ENCODER = 2
 
 [JOINT_2]
@@ -143,8 +170,12 @@ MAX_VELOCITY = 50
 MAX_ACCELERATION = 1000
 MIN_LIMIT = -2.5
 MAX_LIMIT = 2.5
+# currently need to set FERROR large so it won't error when quill is moved
 FERROR=50
 MIN_FERROR=50
+# Z axis magnetic scale is 5um or 5080 counts/inch * -1 so it reads negative when extended downward
+LINEAR_SCALE=-5080
+
 
 [AXIS_Z]
 MIN_LIMIT = 0
