--- a/configs/bridgeport-ethercat/bridgeport-ethercat.ini
+++ b/configs/bridgeport-ethercat/bridgeport-ethercat.ini
@@ -13,7 +13,7 @@ DEBUG = 1
 DISPLAY = axis
 EDITOR = gedit
 
-#PYVCP = pyvcp_panel.xml
+PYVCP = pyvcp_panel.xml
 
 # places the pyvcp panel at the bottom of the Axis window
 PYVCP_POSITION = RIGHT
@@ -88,7 +88,7 @@ CYCLE_TIME =    0.010
 [EMCIO]
 
 # Name of IO controller program, e.g., iov2 has tool changer stuff
-EMCIO = 		io
+EMCIO =	io
 CYCLE_TIME =    0.100
 
 # tool table file
@@ -98,8 +98,8 @@ TOOL_TABLE =    bridgeport-ethercat.tbl
 
 
 [KINS]
-JOINTS = 3
-KINEMATICS = trivkins
+JOINTS = 4
+KINEMATICS = trivkins coordinates=xyzw
 
 
 [AXIS_X]
@@ -135,7 +135,7 @@ CIA402_HOMING_ACCELERATION=200000
 
 
 [AXIS_Y]
-MIN_LIMIT = -11.25
+MIN_LIMIT = -11.0
 MAX_LIMIT = 0.0
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
@@ -147,7 +147,7 @@ MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
 FERROR = .2
 MIN_FERROR = 50
-MIN_LIMIT = -11.25
+MIN_LIMIT = -11.0
 MAX_LIMIT = 0.0
 # Y axis has a 0.200" ball screw (even though X is a 5mm metric screw!)
 # 26:44T belt drive
@@ -164,7 +164,36 @@ CIA402_HOMING_ACCELERATION=200000
 # 2 = use abs but do NOT move
 #HOME_ABSOLUTE_ENCODER = 2
 
+
+[AXIS_Z]
+MIN_LIMIT = -12.0
+MAX_LIMIT = 0.0
+MAX_VELOCITY = 1.5
+MAX_ACCELERATION = 10.0
+
 [JOINT_2]
+TYPE = LINEAR
+MAX_VELOCITY = 1.5
+MAX_ACCELERATION = 10.0
+FERROR = .2
+MIN_FERROR = 50
+MIN_LIMIT = -12.0
+MAX_LIMIT = 0.0
+# bogus number for now
+SERVO_SCALE= 160000
+
+
+
+[AXIS_W]
+MIN_LIMIT = 0
+MAX_LIMIT = -5.1
+MAX_VELOCITY = 0.0
+MAX_ACCELERATION = 0.0
+# requires axis patch in touchoff routine
+TOUCHOFF_ACTUAL = TRUE
+
+
+[JOINT_3]
 TYPE = LINEAR
 MAX_VELOCITY = 50
 MAX_ACCELERATION = 1000
@@ -176,9 +205,3 @@ MIN_FERROR=50
 # Z axis magnetic scale is 5um or 5080 counts/inch * -1 so it reads negative when extended downward
 LINEAR_SCALE=-5080
 
-
-[AXIS_Z]
-MIN_LIMIT = 0
-MAX_LIMIT = -5.1
-MAX_VELOCITY = 0.0
-MAX_ACCELERATION = 0.0
