--- a/configs/bridgeport-ethercat-pyvcp/bridgeport-ethercat.ini
+++ b/configs/bridgeport-ethercat-pyvcp/bridgeport-ethercat.ini
@@ -20,17 +20,27 @@ CYCLE_TIME =            0.050
 # Path to help file
 HELP_FILE =             doc/help.txt
 
-# Initial display setting for position, RELATIVE or MACHINE
-POSITION_OFFSET = RELATIVE
-POSITION_FEEDBACK = ACTUAL
-MAX_FEED_OVERRIDE = 1.2
 # Prefix to be used
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
-#INTRO_GRAPHIC = linuxcnc.gif
-#INTRO_TIME = 0
+INTRO_GRAPHIC = linuxcnc.gif
+INTRO_TIME = 1
 
-#INCREMENTS = 5mm 1mm .5mm .1mm .05mm .01mm .005mm
 INCREMENTS = 0.1in 0.01in 0.001in
+
+POSITION_OFFSET = RELATIVE
+POSITION_FEEDBACK = ACTUAL
+
+DEFAULT_LINEAR_VELOCITY=0.5
+MIN_LINEAR_VELOCITY=0
+MAX_LINEAR_VELOCITY=2.0
+DEFAULT_SPINDLE_0_SPEED=800
+MIN_SPINDLE_0_SPEED=200
+MAX_SPINDLE_0_SPEED=2000
+MAX_SPINDLE_0_OVERRIDE=1.2
+MIN_SPINDLE_0_OVERRIDE=0.5
+MAX_FEED_OVERRIDE = 1.2
+
+
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
