--- a/configs/sim.qtaxis.xyzw/qtaxis.ini
+++ b/configs/sim.qtaxis.xyzw/qtaxis.ini
@@ -225,8 +225,6 @@ MAX_VELOCITY = 5
 MAX_ACCELERATION = 50.0
 
 [JOINT_0]
-
-
 TYPE =                          LINEAR
 HOME =                          0.000
 MAX_VELOCITY =                  5
@@ -243,8 +241,7 @@ HOME_SEARCH_VEL =                20.0
 HOME_LATCH_VEL =                 20.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-HOME_SEQUENCE = 1
-HOME_IS_SHARED = 1
+#HOME_SEQUENCE = 1
 
 # Second axis
 [AXIS_Y]
@@ -254,8 +251,6 @@ MAX_VELOCITY = 5
 MAX_ACCELERATION = 50.0
 
 [JOINT_1]
-
-
 TYPE =                          LINEAR
 HOME =                          0.000
 MAX_VELOCITY =                  5
@@ -272,7 +267,7 @@ HOME_SEARCH_VEL =                20.0
 HOME_LATCH_VEL =                 20.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-HOME_SEQUENCE = 1
+#HOME_SEQUENCE = 1
 
 # Third axis
 [AXIS_Z]
@@ -282,8 +277,6 @@ MAX_VELOCITY = 5
 MAX_ACCELERATION = 50.0
 
 [JOINT_2]
-
-
 TYPE =                          LINEAR
 HOME =                          0.0
 MAX_VELOCITY =                  5
@@ -297,7 +290,6 @@ MIN_LIMIT =                     -8.0
 # The only reason it's greater than 0 here is so that the splash screen
 # gcode will run.
 MAX_LIMIT =                     0.12
-
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET =                    1.0
@@ -305,8 +297,7 @@ HOME_SEARCH_VEL =                20.0
 HOME_LATCH_VEL =                 20.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-HOME_SEQUENCE = 0
-HOME_IS_SHARED = 1
+#HOME_SEQUENCE = 0
 
 
 # Fourth axis
@@ -317,8 +308,6 @@ MAX_VELOCITY = 5
 MAX_ACCELERATION = 50.0
 
 [JOINT_3]
-
-
 TYPE =                          LINEAR
 HOME =                          0.0
 MAX_VELOCITY =                  5
@@ -327,9 +316,7 @@ BACKLASH = 0.000
 INPUT_SCALE =                   4000
 OUTPUT_SCALE = 1.000
 MIN_LIMIT =                     -12.0
-
 MAX_LIMIT =                     0
-
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET =                    1.0
@@ -337,8 +324,6 @@ HOME_SEARCH_VEL =                20.0
 HOME_LATCH_VEL =                 20.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-HOME_SEQUENCE = 0
-HOME_IS_SHARED = 1
-
+#HOME_SEQUENCE = 0
 
 # section for main IO controller parameters
