--- a/configs/sim.qtaxis.xyzw/qtaxis.ini
+++ b/configs/sim.qtaxis.xyzw/qtaxis.ini
@@ -87,6 +87,9 @@ PROGRAM_PREFIX = /home/steve/devel/linuxcnc-bridgeport/configs/nc_files
 INCREMENTS = 0.1 in, 0.01 in, 0.001 in, 0.0001 in, 1 mm, 0.1 mm, 0.01 mm
 GRIDS = .5 in, 1 in, 6 in, 1 mm, 10 mm, 50 mm
 
+CALCULATOR_CONST_VALUES = 0.100, -0.100
+CALCULATOR_ON_SHOW = CLEAR_ALL
+
 # set up 3 user popup message dialogs
 #MESSAGE_BOLDTEXT = NONE
 #MESSAGE_TEXT = This is a statusbar test
@@ -237,11 +240,11 @@ MAX_LIMIT =                     40.0
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET =                    0.0
-HOME_SEARCH_VEL =                20.0
-HOME_LATCH_VEL =                 20.0
+HOME_SEARCH_VEL =                200.0
+HOME_LATCH_VEL =                 200.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-#HOME_SEQUENCE = 1
+HOME_SEQUENCE = 0
 
 # Second axis
 [AXIS_Y]
@@ -263,11 +266,11 @@ MAX_LIMIT =                     40.0
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET =                    0.0
-HOME_SEARCH_VEL =                20.0
-HOME_LATCH_VEL =                 20.0
+HOME_SEARCH_VEL =                200.0
+HOME_LATCH_VEL =                 200.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-#HOME_SEQUENCE = 1
+HOME_SEQUENCE = 0
 
 # Third axis
 [AXIS_Z]
@@ -293,11 +296,11 @@ MAX_LIMIT =                     0.12
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET =                    1.0
-HOME_SEARCH_VEL =                20.0
-HOME_LATCH_VEL =                 20.0
+HOME_SEARCH_VEL =                200.0
+HOME_LATCH_VEL =                 200.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-#HOME_SEQUENCE = 0
+HOME_SEQUENCE = 0
 
 
 # Fourth axis
@@ -320,10 +323,10 @@ MAX_LIMIT =                     0
 FERROR = 0.050
 MIN_FERROR = 0.010
 HOME_OFFSET =                    1.0
-HOME_SEARCH_VEL =                20.0
-HOME_LATCH_VEL =                 20.0
+HOME_SEARCH_VEL =                200.0
+HOME_LATCH_VEL =                 200.0
 HOME_USE_INDEX =                 NO
 HOME_IGNORE_LIMITS =             NO
-#HOME_SEQUENCE = 0
+HOME_SEQUENCE = 0
 
 # section for main IO controller parameters
