--- a/configs/sim.qttangent/qttangent.ini
+++ b/configs/sim.qttangent/qttangent.ini
@@ -41,9 +41,9 @@ DEBUG =              0x00002000
 [DISPLAY]
 
 # Name of display program, e.g., xemc
-DISPLAY = qtvcp -v qtaxis
+DISPLAY = qtvcp -v qttangent
 
-PREFERENCE_FILE_PATH = WORKINGFOLDER/qtaxis.pref
+PREFERENCE_FILE_PATH = WORKINGFOLDER/qttangent.pref
 # embedded programs
 #EMBED_TAB_NAME=Onboard demo
 #EMBED_TAB_COMMAND=onboard --xid
@@ -72,7 +72,7 @@ MAX_SPINDLE_0_SPEED = 3000
 MIN_SPINDLE_0_OVERRIDE =  0.5
 MAX_SPINDLE_0_OVERRIDE =  1.5
 
-# min/max/default jog velocities in qtaxis in units/sec
+# min/max/default jog velocities in units/sec
 MIN_LINEAR_VELOCITY = 0
 MAX_LINEAR_VELOCITY =   1
 DEFAULT_LINEAR_VELOCITY =   .25
