--- a/configs/sim.qttangent/qttangent.ini
+++ b/configs/sim.qttangent/qttangent.ini
@@ -34,8 +34,8 @@ MACHINE =               LinuxCNC-HAL-SIM-AXIS
 #define EMC_DEBUG_PYTHON_TASK       0x00040000
 #define EMC_DEBUG_ALL               0x7FFFFFFF	/* it's an int for %i to work
 					
-DEBUG =              0x00002000
-#DEBUG = 0
+#DEBUG =              0x00002000
+#EMC_DEBUG = 0
 
 # Sections for display options ------------------------------------------------
 [DISPLAY]
