--- a/configs/sim.qttangent/qttangent.ini
+++ b/configs/sim.qttangent/qttangent.ini
@@ -87,7 +87,7 @@ PROGRAM_PREFIX = /home/steve/devel/linuxcnc-bridgeport/configs/nc_files
 INCREMENTS = 0.1 in, 0.01 in, 0.001 in, 0.0001 in, 1 mm, 0.1 mm, 0.01 mm
 GRIDS = .5 in, 1 in, 6 in, 1 mm, 10 mm, 50 mm
 
-CALCULATOR_CONST_VALUES = 0.100, -0.100
+CALCULATOR_CONST_VALUES = 0.100, -0.100, 500, 1000, 2000
 CALCULATOR_ON_SHOW = CLEAR_ALL
 
 # set up 3 user popup message dialogs
