--- a/configs/bridgeport-ethercat-pyvcp/bridgeport-ethercat.ini
+++ b/configs/bridgeport-ethercat-pyvcp/bridgeport-ethercat.ini
@@ -10,8 +10,7 @@ MACHINE = Bridgeport EtherCAT Conversion
 DEBUG = 1
 
 [DISPLAY]
-#DISPLAY = axis
-DISPLAY = qtvcp qtaxis
+DISPLAY = qtvcp qttangent
 EDITOR = gedit
 
 # Cycle time, in seconds, that display will sleep between polls
@@ -22,10 +21,16 @@ HELP_FILE =             doc/help.txt
 
 # Prefix to be used
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
-INTRO_GRAPHIC = linuxcnc.gif
-INTRO_TIME = 1
+#INTRO_GRAPHIC = linuxcnc.gif
+#INTRO_TIME = 1
 
-INCREMENTS = 0.1in 0.01in 0.001in
+
+
+INCREMENTS = 0.1 in, 0.01 in, 0.001 in, 0.0001 in, 1 mm, 0.1 mm, 0.01 mm
+GRIDS = .5 in, 1 in, 6 in, 1 mm, 10 mm, 50 mm
+
+CALCULATOR_CONST_VALUES = 0.100, -0.100, 500, 1000, 2000
+CALCULATOR_ON_SHOW = CLEAR_ALL
 
 POSITION_OFFSET = RELATIVE
 POSITION_FEEDBACK = ACTUAL
@@ -41,15 +46,14 @@ MIN_SPINDLE_0_OVERRIDE=0.5
 MAX_FEED_OVERRIDE = 1.2
 
 
-
 [FILTER]
-PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
-PROGRAM_EXTENSION = .py Python Script
-png = image-to-gcode
-gif = image-to-gcode
-jpg = image-to-gcode
-py = python
-nc = /usr/bin/axis
+PROGRAM_EXTENSION = .ngc,.nc G-Code
+#PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
+#PROGRAM_EXTENSION = .py Python Script
+#png = image-to-gcode
+#gif = image-to-gcode
+#jpg = image-to-gcode
+#py = python
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
@@ -187,6 +191,10 @@ MIN_LIMIT = -12.0
 MAX_LIMIT = 0.0
 # bogus number for now
 SERVO_SCALE= 160000
+CIA402_HOMING_METHOD=33
+CIA402_HOMING_SEARCH_VELOCITY=13981013
+CIA402_HOMING_LATCH_VELOCITY=1398101
+CIA402_HOMING_ACCELERATION=131072
 
 
 
