--- a/configs/bridgeport-ethercat-pyvcp/bridgeport-ethercat.ini
+++ b/configs/bridgeport-ethercat-pyvcp/bridgeport-ethercat.ini
@@ -11,20 +11,14 @@ DEBUG = 1
 
 [DISPLAY]
 DISPLAY = qtvcp qttangent
+PREFERENCE_FILE_PATH = WORKINGFOLDER/qttangent.pref
 EDITOR = gedit
 
-# Cycle time, in seconds, that display will sleep between polls
-CYCLE_TIME =            0.050
+CYCLE_TIME =            0.100
 
 # Path to help file
 HELP_FILE =             doc/help.txt
-
-# Prefix to be used
 PROGRAM_PREFIX = /home/steve/linuxcnc/nc_files
-#INTRO_GRAPHIC = linuxcnc.gif
-#INTRO_TIME = 1
-
-
 
 INCREMENTS = 0.1 in, 0.01 in, 0.001 in, 0.0001 in, 1 mm, 0.1 mm, 0.01 mm
 GRIDS = .5 in, 1 in, 6 in, 1 mm, 10 mm, 50 mm
@@ -48,15 +42,10 @@ MAX_FEED_OVERRIDE = 1.2
 
 [FILTER]
 PROGRAM_EXTENSION = .ngc,.nc G-Code
-#PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
-#PROGRAM_EXTENSION = .py Python Script
-#png = image-to-gcode
-#gif = image-to-gcode
-#jpg = image-to-gcode
-#py = python
 
 [RS274NGC]
 PARAMETER_FILE = linuxcnc.var
+SUBROUTINE_PATH = ~/linuxcnc/nc_files/macros/mill
 
 [EMCMOT]
 EMCMOT = motmod
@@ -64,54 +53,61 @@ HOMEMOD = el7_homecomp
 COMM_TIMEOUT = 1.0
 BASE_PERIOD =  0
 SERVO_PERIOD = 1000000
+# Timeout for comm to emcmot, in seconds
+COMM_TIMEOUT =          1.0
+# Interval between tries to emcmot, in seconds
+COMM_WAIT =             0.010
+# BASE_PERIOD is unused in this configuration but specified in core_sim.hal
+BASE_PERIOD  =               0
+
 
 [TASK]
 TASK = milltask
-CYCLE_TIME = 0.005
+CYCLE_TIME = 0.010
 
 [HAL]
 TWOPASS = true
 HALFILE = bridgeport-ethercat.hal
 #HALFILE = shuttle.hal
 SHUTDOWN = shutdown.hal
-POSTGUI_HALFILE = postgui.hal
+POSTGUI_HALFILE = qtvcp_postgui.hal
 HALUI = halui
 
 [HALUI]
+# NO CONTENT
 
 [TRAJ]
 HOME = 0 0 0
 COORDINATES = X Y Z W
 LINEAR_UNITS = inch
 ANGULAR_UNITS = degree
-DEFAULT_LINEAR_VELOCITY = 0.5
+DEFAULT_LINEAR_VELOCITY = 0.7
 MAX_LINEAR_VELOCITY = 2.5
 DEFAULT_ANGULAR_VELOCITY = 1.0
 MAX_ANGULAR_VELOCITY = 3.0
 
-# not used for abs encoders
+# not used for abs encoders, and in fact right now this causes the servos to go nuts and rapid to some location
+# after homing so DO NOT USE IT until this is figured out!
 #POSITION_FILE = position.txt
 
 # cycle time, in seconds
 CYCLE_TIME =    0.010
 
 [EMCIO]
-
 # Name of IO controller program, e.g., iov2 has tool changer stuff
 EMCIO =	io
-CYCLE_TIME =    0.100
+CYCLE_TIME =    0.200
 
 # tool table file
 TOOL_TABLE =    bridgeport-ethercat.tbl
-#TOOL_CHANGE_POSITION = 0 0 50.8
-#RANDOM_TOOLCHANGER = 1
-
 
 [KINS]
 JOINTS = 4
 KINEMATICS = trivkins coordinates=xyzw
 
-
+###############################################################################
+# X AXIS / JOINT 0
+###############################################################################
 [AXIS_X]
 MIN_LIMIT = 0.0
 MAX_LIMIT = 24.0
@@ -142,14 +138,14 @@ CIA402_HOMING_ACCELERATION=200000
 # 2 = use abs but do NOT move
 #HOME_ABSOLUTE_ENCODER = 2
 
-
-
+###############################################################################
+# Y AXIS / JOINT 1
+###############################################################################
 [AXIS_Y]
 MIN_LIMIT = -11.0
 MAX_LIMIT = 0.0
 MAX_VELOCITY = 2.5
 MAX_ACCELERATION = 15.0
-
 
 [JOINT_1]
 TYPE = LINEAR
@@ -175,6 +171,9 @@ CIA402_HOMING_ACCELERATION=200000
 #HOME_ABSOLUTE_ENCODER = 2
 
 
+###############################################################################
+# Z AXIS / JOINT 2
+################################################################################
 [AXIS_Z]
 MIN_LIMIT = -12.0
 MAX_LIMIT = 0.0
@@ -197,22 +196,23 @@ CIA402_HOMING_LATCH_VELOCITY=1398101
 CIA402_HOMING_ACCELERATION=131072
 
 
-
+###############################################################################
+# W AXIS / JOINT 3 (no servo motor - manual quill with scale)
+###############################################################################
 [AXIS_W]
-MIN_LIMIT = 0
-MAX_LIMIT = -5.1
-MAX_VELOCITY = 0.0
-MAX_ACCELERATION = 0.0
+MIN_LIMIT = -5.1
+MAX_LIMIT = 0
+MAX_VELOCITY = 0.1
+MAX_ACCELERATION = 0.1
 # requires axis patch in touchoff routine
 TOUCHOFF_ACTUAL = TRUE
 
-
 [JOINT_3]
 TYPE = LINEAR
-MAX_VELOCITY = 50
+MAX_VELOCITY = 0.1
 MAX_ACCELERATION = 1000
-MIN_LIMIT = -2.5
-MAX_LIMIT = 2.5
+MIN_LIMIT = -5.1
+MAX_LIMIT = 0
 # currently need to set FERROR large so it won't error when quill is moved
 FERROR=50
 MIN_FERROR=50
