hmi stuff in testing

--- a/configs/sim.qttangent/qttangent.ini
+++ b/configs/sim.qttangent/qttangent.ini
@@ -164,6 +164,7 @@ HALFILE = hallib/sim_spindle_encoder.hal
 #HALFILE = axis_manualtoolchange.hal
 HALFILE = hallib/simulated_home.hal
 HALFILE = check_constraints.hal
+HALFILE = hmi.hal
 
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
